samples/_failures_safe/1761256460_a9232b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e337b436.c: In function ‘main’:
./samples/SAFE/__tmp_e337b436.c:154:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  154 |     for (size_t i
      |     ^~~
./samples/SAFE/__tmp_e337b436.c:154:5: error: expected declaration or statement at end of input
